# DataExtract

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.dev.yml  docker-compose.yml  extraction.db  extraction.db.bak  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py  exceptions.py  logging.py
app/database/: elasticsearch.py  models.py  project_session.py  session.py
app/extraction/: base.py  csv_extractor.py  doc_extractor.py  email_extractor.py  excel_extractor.py  image_extractor.py  pdf_extractor.py  ppt_extractor.py  registry.py  video_extractor.py
app/security/: auth.py
app/services/: email_service.py  extraction_service.py
databases/: _superadmin_.db  oil_refinery.db  ship_engineering.db  test_project.db
email_logs/: 20260318_120524_rishabh_at_targeticon_com.html  20260318_123233_rishabh_at_targeticon_com.html
frontend/static/css/: style.css
frontend/static/js/: admin.js  app.js  dashboard.js  email.js  filter.js  keys.js  login.js  upload.js  view.js
frontend/templates/: admin.html  base.html  dashboard.html  email.html  filter.html  keys.html  login.html  upload.html  view.html
nginx/: nginx.conf
tests/: test_api.py  test_extractors.py
